# FileCompressor

./: CMakeLists.txt  Makefile  README.md  archive.hpp  bit_io.hpp  compressor.hpp  crc32.hpp  file_detector.hpp  filecompressor  huffman.hpp  lz77.hpp  lzss.hpp  main.cpp  rnc.hpp
docs/html/: annotated.html  annotated_dup.js  archive_8hpp.html  archive_8hpp.js  archive_8hpp_source.html  bit__io_8hpp.html  bit__io_8hpp.js  bit__io_8hpp_source.html  class_arith_decoder-members.html  class_arith_decoder.html  class_arith_decoder.js  class_arith_encoder-members.html  class_arith_encoder.html  class_arith_encoder.js  class_bit_reader-members.html  class_bit_reader.html  class_bit_reader.js  class_bit_writer-members.html  class_bit_writer.html  class_bit_writer.js  class_c_r_c32-members.html  class_c_r_c32.html  class_c_r_c32.js  class_compressor-members.html  class_compressor.html  class_compressor.js  class_file_detector-members.html  class_file_detector.html  class_file_detector.js  class_huffman_coder-members.html  class_huffman_coder.html  class_huffman_coder.js  class_l_z77_coder-members.html  class_l_z77_coder.html  class_l_z77_coder.js  class_l_z_s_s_coder-members.html  class_l_z_s_s_coder.html  class_l_z_s_s_coder.js  class_p_p_m_coder-members.html  class_p_p_m_coder.html  (+82 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  (+35 more)
include/: archive.hpp  bit_io.hpp  compressor.hpp  crc32.hpp  file_detector.hpp  huffman.hpp  lz77.hpp  lzss.hpp  ppm.hpp  rnc.hpp
src/: archive.hpp  bit_io.hpp  compressor.hpp  crc32.hpp  file_detector.hpp  huffman.hpp  lz77.hpp  lzss.hpp  main.cpp  ppm.hpp  rnc.hpp  test.cpp
tests/: tests.cpp
